    Macs. Thanks to Martin Aumueller and Emanuele Giaquinta.
  * Fix amp muting when level is still at 100. Patch by Reinhard Nissl.
  * Create at least a 1×1 shared image when the first frame is skipped (and
    thus reported as 0×0), to avoid disabling shared memory for all others.
    Patch by Reinhard Nissl.
  * Send an event when the amp level is modified. Patch by Reinhard Nissl.

xine-lib (1.1.4)
  * Mark string-type configuration items according to whether they're plain
    strings or names of files, device nodes or directories. This information
    is available to front ends (via .num_value) so that they can present
    file/dir-open dialogue boxes if they so choose.
    Subtitle font selection is split up due to this.
  * Applied the patch to fix text relocation, provided by PaX Team for Gentoo
    and previously applied by other distributions as well. Fixes the non-PIC
    code being generated. Note: patch reverted for tomsmocomp (segfault).
  * Fix race condition in audio_out by using a recursive mutex; patch by
    Reinhard Nissl. [bug #1551911]
  * Allow building with Sun CC by fixing the lprintf variadic macro; patch by
    Taso N. Devetzis. [bug #1614406]
  * Fix disposing of image buffers in video_out_xv when SHM get disabled by
    exhaustion of memory; patch by Matthias Drochner. [bug #1620339]
  * Fix invalid memory access in Real Media ASM parser; reported by Roland
    Kay. [bug #1603503]
  * Fix program termination due to invalid Real Media SDP; reported by Roland
    Kay. [bug #1602663]
  * Fix invalid memory access in Real Media SDP with tailored stream; reported
    by Roland Kay. [bug #1602631]
  * Don't check for libpostproc version and assume that if libavcodec is found
    correctly, libpostproc is of the same version, too. Reported by Ville
    Skyttä. [bug #1617344]
  * Fix Shorten demuxer: the whole "ajkg" signature has to be found, not only
    one character of it. [bug #1601134]